--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,3 +27,10 @@ flutter:
 
   assets:
     - assets/images/
+
+
+fonts:
+    - family: Montserrat
+      fonts:
+        - asset: assets/fonts/Montserrat-Medium.ttf
+          weight: 500
