--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,18 +9,19 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
+  bloc: ^8.1.2
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
-  bloc: ^8.1.2
-  equatable: ^2.0.5
   flutter_screenutil: ^5.9.3
+  go_router: ^17.0.0
   smooth_page_indicator: ^1.1.0+2
 
 dev_dependencies:
+  flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
@@ -28,9 +29,8 @@ flutter:
   assets:
     - assets/images/
 
-
 fonts:
-    - family: Montserrat
-      fonts:
-        - asset: assets/fonts/Montserrat-Medium.ttf
-          weight: 500
+  - family: Montserrat
+    fonts:
+      - asset: assets/fonts/Montserrat-Medium.ttf
+        weight: 500
