--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,3 +34,9 @@ fonts:
       fonts:
         - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
+flutter_assets:
+  assets_path: assets/images/
+  output_path: lib/core/utils
+  filename: assets.dart
+  field_prefix: resource
+  ignore_comments: true
