--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,10 @@ fonts:
       fonts:
         - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
+    - family: georgia
+      fonts:
+        - asset: assets/fonts/georgia.ttf
+          weight: 400
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/utils
