--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
+  smooth_page_indicator: ^1.1.0+2
 
 dev_dependencies:
   flutter_lints: ^3.0.0
@@ -33,6 +34,10 @@ fonts:
       fonts:
         - asset: assets/fonts/Montserrat-Medium.ttf
           weight: 500
+    - family: georgia
+      fonts:
+        - asset: assets/fonts/georgia.ttf
+          weight: 400
 flutter_assets:
   assets_path: assets/images/
   output_path: lib/core/utils
