--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
   smooth_page_indicator: ^1.1.0+2
+  intl_phone_number_input: ^0.7.5
 
 dev_dependencies:
   flutter_lints: ^3.0.0
