--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,20 +9,51 @@ environment:
   sdk: '>=3.0.0 <4.0.0'
 
 dependencies:
-  bloc: ^8.1.2
-  equatable: ^2.0.5
+  
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
+  
+  
+
+
+  # ui 
+  image_picker: ^1.0.7
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
   smooth_page_indicator: ^1.1.0+2
   intl_phone_number_input: ^0.7.5
+  device_preview: ^1.2.0
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
+  flutter_svg: ^2.0.9
+  connectivity_plus: ^5.0.2
+  intl: ^0.20.2
+
+  
+
+  # logic
+  bloc: ^8.1.2
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.3
+  shared_preferences: ^2.2.2
+  freezed_annotation: ^2.4.1
+  permission_handler: ^11.2.0
+  get_it: ^7.6.7
+
+
 
 dev_dependencies:
   flutter_lints: ^3.0.0
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^5.1.0
+  # flutter_launcher_icons: ^0.13.1
+  build_runner: ^2.4.9
+  freezed: ^2.4.7
+  json_serializable: ^6.7.1
+  
+
+
 
 flutter:
   uses-material-design: true
