--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   go_router: ^17.0.0
   smooth_page_indicator: ^1.1.0+2
   intl_phone_number_input: ^0.7.5
+  pinput: ^6.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
