--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   flutter_screenutil: ^5.9.3
   go_router: ^17.0.0
+  smooth_page_indicator: ^2.0.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
