update in home screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_screenutil: ^5.9.3
   smooth_page_indicator: ^1.1.0+2
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
