--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   cached_network_image: ^3.3.1
   connectivity_plus: ^5.0.2
   device_preview: ^1.2.0
+  dotted_border: ^3.1.0
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -25,6 +26,7 @@ dependencies:
   image_picker: ^1.0.7
   intl: ^0.20.2
   intl_phone_number_input: ^0.7.5
+  mobkit_dashed_border: ^0.0.8
   permission_handler: ^11.2.0
   pinput: ^6.0.1
   scrollable_clean_calendar: ^1.5.0
