--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   scrollable_clean_calendar: ^1.5.0
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0+2
+  intl_phone_number_input: ^0.7.5
 
 dev_dependencies:
   build_runner: ^2.4.9
