--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,13 +27,15 @@ dependencies:
   go_router: ^17.0.0
   image_picker: ^1.0.7
   intl: ^0.20.2
-  intl_phone_number_input: ^0.7.5
   mobkit_dashed_border: ^0.0.8
   permission_handler: ^11.2.0
   pinput: ^6.0.1
   scrollable_clean_calendar: ^1.5.0
   shared_preferences: ^2.2.2
   smooth_page_indicator: ^1.1.0+2
+  google_maps_flutter: ^2.14.0
+  flutter_map: ^8.2.2
+  latlong2: ^0.9.1
 
 dev_dependencies:
   build_runner: ^2.4.9
