--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,10 @@ dependencies:
   bloc: ^8.1.2
   cached_network_image: ^3.3.1
   connectivity_plus: ^5.0.2
+  date_picker_timeline: ^1.2.7
   device_preview: ^1.2.0
   dotted_border: ^3.1.0
+  easy_date_timeline: ^2.0.9
   equatable: ^2.0.5
   flutter:
     sdk: flutter
@@ -64,6 +66,18 @@ fonts:
     fonts:
       - asset: assets/fonts/PlusJakartaSans-Regular.ttf
         weight: 400
+  - family: Inter_28pt
+    fonts:
+       - asset: assets/fonts/Inter_28pt-Regular.ttf
+         weight: 400
+       - asset: assets/fonts/Inter_28pt-SemiBold.ttf
+         weight: 600
+       - asset: assets/fonts/Inter_28pt-Medium.ttf
+         weight: 500
+
+        
+
+
 
 flutter_assets:
   assets_path: assets/images/
