--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.3
+  flutter_map: ^8.2.2
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.3
   freezed_annotation: ^2.4.1
@@ -68,16 +69,12 @@ fonts:
         weight: 400
   - family: Inter_28pt
     fonts:
-       - asset: assets/fonts/Inter_28pt-Regular.ttf
-         weight: 400
-       - asset: assets/fonts/Inter_28pt-SemiBold.ttf
-         weight: 600
-       - asset: assets/fonts/Inter_28pt-Medium.ttf
-         weight: 500
-
-        
-
-
+      - asset: assets/fonts/Inter_28pt-Regular.ttf
+        weight: 400
+      - asset: assets/fonts/Inter_28pt-SemiBold.ttf
+        weight: 600
+      - asset: assets/fonts/Inter_28pt-Medium.ttf
+        weight: 500
 
 flutter_assets:
   assets_path: assets/images/
